--- a/FUNCIONÁRIO(ADM)/login/index.html
+++ b/FUNCIONÁRIO(ADM)/login/index.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmoakBook</title>
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/dark.ico" type="image/x-icon">
+    <link rel="stylesheet" href="teste.css">
 </head>
 <body>
-    <!-- Conteúdo do seu site -->
+    <div class="background">
+        
+    </div>
 </body>
 </html>
