--- a/FUNCIONÁRIO(ADM)/login/index.html
+++ b/FUNCIONÁRIO(ADM)/login/index.html
@@ -5,11 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SmoakBook</title>
     <link rel="icon" href="/dark.ico" type="image/x-icon">
-    <link rel="stylesheet" href="teste.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="background">
-        
+        <div class="container">
+            <div class="img-container">
+                <img src="/imagens_telas/6737457.png" alt="Imagem tela de login" class="imgLogin">
+            </div>
+            <div class="conteudo">
+                <p class="login">Login</p>
+                <input type="text" placeholder="Usuário" class="input-field">
+                <input type="password" placeholder="Senha" class="input-field">
+                <button class="login-button">Entrar</button>
+            </div>
+        </div>
     </div>
 </body>
 </html>
