--- a/FUNCIONÁRIO(ADM)/login/index.html
+++ b/FUNCIONÁRIO(ADM)/login/index.html
@@ -6,6 +6,9 @@
     <title>SmoakBook</title>
     <link rel="icon" href="/dark.ico" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="background">
@@ -15,9 +18,15 @@
             </div>
             <div class="conteudo">
                 <p class="login">Login</p>
-                <input type="text" placeholder="Usuário" class="input-field">
+                <input type="number" placeholder="RM" class="input-field">
                 <input type="password" placeholder="Senha" class="input-field">
-                <button class="login-button">Entrar</button>
+                <div class="cadastre">
+                    Não tem cadastro? <a href="/FUNCIONÁRIO(ADM)/signUp/">Cadastre-se</a>
+                </div>
+                <div class="esqueceuSenha">
+                    <a href="/FUNCIONÁRIO(ADM)/esqueceuSenha1/">Esqueceu a senha?</a>
+                </div>
+                <button class="login-button">Fazer login</button>
             </div>
         </div>
     </div>
