--- a/FUNCIONÁRIO(ADM)/esqueceuSenha2/index.html
+++ b/FUNCIONÁRIO(ADM)/esqueceuSenha2/index.html
@@ -14,19 +14,17 @@
     <div class="background">
         <div class="container">
             <div class="img-container">
-                <img src="/imagens_telas/6737457.png" alt="Imagem tela de login" class="imgLogin">
+                <img src="/imagens_telas/6333054.png" alt="Imagem tela de redefinir senha" class="imgEsqSenha">
             </div>
             <div class="conteudo">
-                <p class="login">Login</p>
-                <input type="number" placeholder="RM" class="input-field">
+                <p class="redefinirSenha">Redefinir senha</p>
+                <text class="texto">Por favor, insira no campo abaixo o código de ativação que você recebeu por e-mail e redefina uma nova senha.</text>
+                <div class="container-input">
+                <input type="number" placeholder="Código" class="input-field">
                 <input type="password" placeholder="Senha" class="input-field">
-                <div class="cadastre">
-                    Não tem cadastro? <a href="/FUNCIONÁRIO(ADM)/signUp/">Cadastre-se</a>
-                </div>
-                <div class="esqueceuSenha">
-                    <a href="/FUNCIONÁRIO(ADM)/esqueceuSenha1/">Esqueceu a senha?</a>
-                </div>
-                <a href="/FUNCIONÁRIO(ADM)/telaInicial/"><button class="login-button">Fazer login</button></a>
+                <input type="password" placeholder="Confirme a nova senha" class="input-field">
+            </div>
+                <a href="/FUNCIONÁRIO(ADM)/login/"><button class="redefinir-button">Redefinir senha</button></a>
             </div>
         </div>
     </div>
