--- a/FUNCIONÁRIO(ADM)/signUp/index.html
+++ b/FUNCIONÁRIO(ADM)/signUp/index.html
@@ -22,10 +22,10 @@
                 <input type="text" placeholder="Nome completo" class="input-field">
                 <input type="email" placeholder="E-mail" class="input-field">
                 <div class="senha">
-                <input type="password" placeholder="Senha" class="input-field senha-field">
-                <input type="password" placeholder="Confirmar senha" class="input-field senha-field">
+                    <input type="password" placeholder="Senha" class="input-field senha-field">
+                    <input type="password" placeholder="Confirmar senha" class="input-field senha-field">
                 </div>
-                <form>
+                <form class="sexo-form">
                     <legend>Sexo:</legend>
 
                     <label>
