--- a/FUNCIONÁRIO(ADM)/esqueceuSenha1/index.html
+++ b/FUNCIONÁRIO(ADM)/esqueceuSenha1/index.html
@@ -14,19 +14,16 @@
     <div class="background">
         <div class="container">
             <div class="img-container">
-                <img src="/imagens_telas/6737457.png" alt="Imagem tela de login" class="imgLogin">
+                <img src="/imagens_telas/6333054.png" alt="Imagem tela de redefinir senha" class="imgEsqSenha">
             </div>
             <div class="conteudo">
-                <p class="login">Login</p>
-                <input type="number" placeholder="RM" class="input-field">
-                <input type="password" placeholder="Senha" class="input-field">
-                <div class="cadastre">
-                    Não tem cadastro? <a href="/FUNCIONÁRIO(ADM)/signUp/">Cadastre-se</a>
+                <p class="redefinirSenha">Redefinir senha</p>
+                <text class="texto">Digite o seu e-mail no campo abaixo e lhe enviaremos um código de ativação.</text>
+                <input type="email" placeholder="E-mail" class="input-field">
+                <div class="logar">
+                    Já tem uma conta? <a href="/FUNCIONÁRIO(ADM)/login/">Faça login</a>
                 </div>
-                <div class="esqueceuSenha">
-                    <a href="/FUNCIONÁRIO(ADM)/esqueceuSenha1/">Esqueceu a senha?</a>
-                </div>
-                <a href="/FUNCIONÁRIO(ADM)/telaInicial/"><button class="login-button">Fazer login</button></a>
+                <a href="/FUNCIONÁRIO(ADM)/esqueceuSenha2/"><button class="redefinir-button">Redefinir</button></a>
             </div>
         </div>
     </div>
