--- a/FUNCIONÁRIO(ADM)/telaInicial/index.html
+++ b/FUNCIONÁRIO(ADM)/telaInicial/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -18,20 +18,77 @@
             <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
         </div>
         <div class="retangOrange"></div>
-    <nav class="navbar">
-        <ul>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">person</span>Perfil</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">info</span>Informações</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/login/"><span class="material-symbols-outlined">person</span>Sair</a></li>
-        </ul>
-    </nav>
+        <nav class="navbar">
+            <ul>
+                <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/" class="active"><span class="material-symbols-outlined">home</span>Início</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/selecao/"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/informacoes/"><span class="material-symbols-outlined">info</span>Informações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
+            </ul>
+        </nav>
+        <div class="search-container">
+            <input type="text" placeholder="Procurar" id="search-input">
+            <button type="button"><span class="material-symbols-outlined">search</span></button>
+        </div>
+        <div class="img">
+            <img src="/imagens_telas/horarioo.png" class="imgHorario">
+        </div>
+        <div class="book-list">
+            <div class="book-item">
+                <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O diário de Anne Frank" class="book-image">
+                <div class="book-info">
+                    <h2 class="book-title">O diário de Anne Frank</h2>
+                    <p class="book-author">Anne Frank</p>
+                    <p class="book-course">Téc. Recursos Humanos</p>
+                </div>
+            </div>
+            <div class="book-item">
+                <img src="/Capa_dos_livros/dom casmurro.jpg" alt="Dom Casmurro" class="book-image">
+                <div class="book-info">
+                    <h2 class="book-title">Dom Casmurro</h2>
+                    <p class="book-author">Machado de Assis</p>
+                    <p class="book-course">Téc. Contabilidade</p>
+                </div>
+            </div>
+            <div class="book-item">
+                <img src="/Capa_dos_livros/romeu e julieta.jpg" alt="Romeu e Julieta" class="book-image">
+                <div class="book-info">
+                    <h2 class="book-title">Romeu e Julieta</h2>
+                    <p class="book-author">William Shakespeare</p>
+                    <p class="book-course">Téc. Design de Interiores</p>
+                </div>
+            </div>
+            <div class="book-item">
+                <img src="/Capa_dos_livros/1984.jpg" alt="1984" class="book-image">
+                <div class="book-info">
+                    <h2 class="book-title">1984</h2>
+                    <p class="book-author">George Orwell</p>
+                    <p class="book-course">Téc. Informática</p>
+                </div>
+            </div>
+            <div class="book-item">
+                <img src="/Capa_dos_livros/os miseráveis.jpg" alt="Os Miseráveis" class="book-image">
+                <div class="book-info">
+                    <h2 class="book-title">Os Miseráveis</h2>
+                    <p class="book-author">Victor Hugo</p>
+                    <p class="book-course">Téc. Administração</p>
+                </div>
+            </div>
+            <div class="book-item">
+                <img src="/Capa_dos_livros/orgulho e preconceito.png" alt="Orgulho e Preconceito" class="book-image">
+                <div class="book-info">
+                    <h2 class="book-title">Orgulho e Preconceito</h2>
+                    <p class="book-author">Jane Austen</p>
+                    <p class="book-course">Téc. Farmácia</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
