--- a/FUNCIONÁRIO(ADM)/login/index.html
+++ b/FUNCIONÁRIO(ADM)/login/index.html
@@ -17,7 +17,7 @@
                 <img src="/imagens_telas/6737457.png" alt="Imagem tela de login" class="imgLogin">
             </div>
             <div class="conteudo">
-                <p class="login">Login</p>
+                <h1 class="login">Login</h1>
                 <input type="number" placeholder="RM" class="input-field">
                 <input type="password" placeholder="Senha" class="input-field">
                 <div class="cadastre">
