--- a/FUNCIONÁRIO(ADM)/signUp/index.html
+++ b/FUNCIONÁRIO(ADM)/signUp/index.html
@@ -17,7 +17,7 @@
                 <img src="/imagens_telas/img_cadastro.png" alt="Imagem tela de cadastro" class="imgCadastro">
             </div>
             <div class="conteudo">
-                <p class="cadastro">Cadastro</p>
+                <h1 class="cadastro">Cadastro</h1>
                 <input type="number" placeholder="RM" class="input-field">
                 <input type="text" placeholder="Nome completo" class="input-field">
                 <input type="email" placeholder="E-mail" class="input-field">
