--- a/FUNCIONÁRIO(ADM)/telaInicial/index.html
+++ b/FUNCIONÁRIO(ADM)/telaInicial/index.html
@@ -37,58 +37,72 @@
             <button type="button"><span class="material-symbols-outlined">search</span></button>
         </div>
         <div class="img">
-            <img src="/imagens_telas/horarioo.png" class="imgHorario">
+            <img src="/imagens_telas/horario.png" class="imgHorario">
         </div>
-        <div class="book-list">
-            <div class="book-item">
-                <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O diário de Anne Frank" class="book-image">
-                <div class="book-info">
-                    <h2 class="book-title">O diário de Anne Frank</h2>
-                    <p class="book-author">Anne Frank</p>
+        
+        <div class="book-section">
+            <text class="title">Recomendações dos professores</text>
+        </div>
+            <div class="book-list">
+                <div class="book-item">
                     <p class="book-course">Téc. Recursos Humanos</p>
+                    <img src="/Capa_dos_livros/o diário de anne frank.jpg" alt="O diário de Anne Frank" class="book-image">
+                    <div class="book-info">
+                        <h2 class="book-title">O diário de Anne Frank</h2>
+                        <p class="book-author">Anne Frank</p>
+                    </div>
                 </div>
-            </div>
-            <div class="book-item">
-                <img src="/Capa_dos_livros/dom casmurro.jpg" alt="Dom Casmurro" class="book-image">
-                <div class="book-info">
-                    <h2 class="book-title">Dom Casmurro</h2>
-                    <p class="book-author">Machado de Assis</p>
+                <div class="book-item">
                     <p class="book-course">Téc. Contabilidade</p>
+                    <img src="/Capa_dos_livros/dom casmurro.jpg" alt="Dom Casmurro" class="book-image">
+                    <div class="book-info">
+                        <h2 class="book-title">Dom Casmurro</h2>
+                        <p class="book-author">Machado de Assis</p>
+                    </div>
                 </div>
-            </div>
-            <div class="book-item">
-                <img src="/Capa_dos_livros/romeu e julieta.jpg" alt="Romeu e Julieta" class="book-image">
-                <div class="book-info">
-                    <h2 class="book-title">Romeu e Julieta</h2>
-                    <p class="book-author">William Shakespeare</p>
+                <div class="book-item">
                     <p class="book-course">Téc. Design de Interiores</p>
+                    <img src="/Capa_dos_livros/romeu e julieta.jpg" alt="Romeu e Julieta" class="book-image">
+                    <div class="book-info">
+                        <h2 class="book-title">Romeu e Julieta</h2>
+                        <p class="book-author">William Shakespeare</p>
+                    </div>
                 </div>
-            </div>
-            <div class="book-item">
-                <img src="/Capa_dos_livros/1984.jpg" alt="1984" class="book-image">
-                <div class="book-info">
-                    <h2 class="book-title">1984</h2>
-                    <p class="book-author">George Orwell</p>
+                <div class="book-item">
                     <p class="book-course">Téc. Informática</p>
+                    <img src="/Capa_dos_livros/1984.jpg" alt="1984" class="book-image">
+                    <div class="book-info">
+                        <h2 class="book-title">1984</h2>
+                        <p class="book-author">George Orwell</p>
+                    </div>
                 </div>
-            </div>
-            <div class="book-item">
-                <img src="/Capa_dos_livros/os miseráveis.jpg" alt="Os Miseráveis" class="book-image">
-                <div class="book-info">
-                    <h2 class="book-title">Os Miseráveis</h2>
-                    <p class="book-author">Victor Hugo</p>
+                <div class="book-item">
                     <p class="book-course">Téc. Administração</p>
+                    <img src="/Capa_dos_livros/os miseráveis.jpg" alt="Os Miseráveis" class="book-image">
+                    <div class="book-info">
+                        <h2 class="book-title">Os Miseráveis</h2>
+                        <p class="book-author">Victor Hugo</p>
+                        
+                    </div>
                 </div>
-            </div>
-            <div class="book-item">
-                <img src="/Capa_dos_livros/orgulho e preconceito.png" alt="Orgulho e Preconceito" class="book-image">
-                <div class="book-info">
-                    <h2 class="book-title">Orgulho e Preconceito</h2>
-                    <p class="book-author">Jane Austen</p>
+                <div class="book-item">
                     <p class="book-course">Téc. Farmácia</p>
+                    <img src="/Capa_dos_livros/orgulho e preconceito.png" alt="Orgulho e Preconceito" class="book-image">
+                    <div class="book-info">
+                        <h2 class="book-title">Orgulho e Preconceito</h2>
+                        <p class="book-author">Jane Austen</p>
+                    </div>
                 </div>
             </div>
+        <div class="img">
+            <img src="/imagens_telas/frase.png" class="imgFrase">
         </div>
     </div>
+
+    <footer>
+        <div>
+            Desenvolvido por <a href="http://127.0.0.1:5500/FUNCION%C3%81RIO(ADM)/telaInicial/" target="_blank">books@gmail.com</a>
+        </div>
+    </footer>
 </body>
 </html>
