--- a/FUNCIONÁRIO(ADM)/esqueceuSenha1/index.html
+++ b/FUNCIONÁRIO(ADM)/esqueceuSenha1/index.html
@@ -17,7 +17,7 @@
                 <img src="/imagens_telas/6333054.png" alt="Imagem tela de redefinir senha" class="imgEsqSenha">
             </div>
             <div class="conteudo">
-                <p class="redefinirSenha">Redefinir senha</p>
+                <h1 class="redefinirSenha">Redefinir senha</h1>
                 <text class="texto">Digite o seu e-mail no campo abaixo e lhe enviaremos um código de ativação.</text>
                 <input type="email" placeholder="E-mail" class="input-field">
                 <div class="logar">
