--- a/FUNCIONÁRIO(ADM)/esqueceuSenha2/index.html
+++ b/FUNCIONÁRIO(ADM)/esqueceuSenha2/index.html
@@ -17,7 +17,7 @@
                 <img src="/imagens_telas/6333054.png" alt="Imagem tela de redefinir senha" class="imgEsqSenha">
             </div>
             <div class="conteudo">
-                <p class="redefinirSenha">Redefinir senha</p>
+                <h1 class="redefinirSenha">Redefinir senha</h1>
                 <text class="texto">Por favor, insira no campo abaixo o código de ativação que você recebeu por e-mail e redefina uma nova senha.</text>
                 <div class="container-input">
                 <input type="number" placeholder="Código" class="input-field">
