--- a/FUNCIONÁRIO(ADM)/selecao/index.html
+++ b/FUNCIONÁRIO(ADM)/selecao/index.html
@@ -8,30 +8,94 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,100,0,0" />
 </head>
 <body>
+    <div class="header">
+            <div class="retangGreen">
+                <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
+                <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
+            </div>
+            <div class="retangOrange"></div>
+        <nav class="navbar">
+            <ul>
+                <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/selecao/" class="active"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/informacoes/"><span class="material-symbols-outlined">info</span>Informações</a></li>
+                <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <h1 class="selecao">Seleção de usuários</h1>
+
     <div class="container">
-        <div class="retangGreen">
-            <img src="/imagens_telas/logo.png" class="imgLogo" alt="Logo">
-            <img src="/imagens_telas/etec.png" class="imgEtec" alt="Etec">
+    <div class="lineSquare">
+        <div class="input-container">
+            <p class="info">Cadastro realizado no dia: 12/03/2024</p>
+            <p class="info">Nome: Clara Oliveira da Silva</p>
+            <p class="info">RM: 550726</p>
+            <p class="info">E-mail: clara.oliveira.silva@example.com</p>
+            <div class="line"></div>
+            <p class="p-usuario"> Confirmar nível do usuário</p>
+            <div class="opcao">
+                <select id="options" class="select-input">
+                    <option value="">Selecione uma opção</option>
+                    <option value="funcionario(a)ADM">Funcionário(a) - ADM</option>
+                    <option value="professor(a)">Professor(a)</option>
+                    <option value="aluno(a)">Aluno(a)</option>
+                </select>
+                <button type="submit" class="confirm-button">Confirmar</button>
+            </div>
         </div>
-        <div class="retangOrange"></div>
-    <nav class="navbar">
-        <ul>
-            <li><a href="/FUNCIONÁRIO(ADM)/telaInicial/"><span class="material-symbols-outlined">home</span>Início</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/perfil/"><span class="material-symbols-outlined">person</span>Perfil</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/selecao/" class="active"><span class="material-symbols-outlined">signpost</span>Seleção</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/recomendacao/"><span class="material-symbols-outlined">star</span>Recomendações</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/biblioteca/"><span class="material-symbols-outlined">menu_book</span>Biblioteca</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/reservas/"><span class="material-symbols-outlined">calendar_month</span>Reservas</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/notificacoes/"><span class="material-symbols-outlined">notifications</span>Notificações</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/emprestimos/"><span class="material-symbols-outlined">book_2</span>Empréstimos</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/informacoes/"><span class="material-symbols-outlined">info</span>Informações</a></li>
-            <li><a href="/FUNCIONÁRIO(ADM)/login/" class="sair"><span class="material-symbols-outlined">logout</span>Sair</a></li>
-        </ul>
-    </nav>
+    </div>
+    <div class="lineSquare">
+        <div class="input-container">
+            <p>Cadastro realizado no dia: 12/03/2024</p>
+            <p>Nome: Clara Oliveira da Silva</p>
+            <p>RM: 550726</p>
+            <p>E-mail: clara.oliveira.silva@example.com</p>
+        </div>
+    </div>
+    <div class="lineSquare">
+        <div class="input-container">
+            <p>Cadastro realizado no dia: 12/03/2024</p>
+            <p>Nome: Clara Oliveira da Silva</p>
+            <p>RM: 550726</p>
+            <p>E-mail: clara.oliveira.silva@example.com</p>
+        </div>
+    </div>
+    <div class="lineSquare">
+        <div class="input-container">
+            <p>Cadastro realizado no dia: 12/03/2024</p>
+            <p>Nome: Clara Oliveira da Silva</p>
+            <p>RM: 550726</p>
+            <p>E-mail: clara.oliveira.silva@example.com</p>
+        </div>
+    </div>
+    <div class="lineSquare">
+        <div class="input-container">
+            <p>Cadastro realizado no dia: 12/03/2024</p>
+            <p>Nome: Clara Oliveira da Silva</p>
+            <p>RM: 550726</p>
+            <p>E-mail: clara.oliveira.silva@example.com</p>
+        </div>
+    </div>
+    <div class="lineSquare">
+        <div class="input-container">
+            <p>Cadastro realizado no dia: 12/03/2024</p>
+            <p>Nome: Clara Oliveira da Silva</p>
+            <p>RM: 550726</p>
+            <p>E-mail: clara.oliveira.silva@example.com</p>
+        </div>
+    </div>
     </div>
 </body>
 </html>
