--- a/FUNCIONÁRIO(ADM)/selecao/index.html
+++ b/FUNCIONÁRIO(ADM)/selecao/index.html
@@ -37,65 +37,63 @@
     <h1 class="selecao">Seleção de usuários</h1>
 
     <div class="container">
-    <div class="lineSquare">
-        <div class="input-container">
-            <p class="info">Cadastro realizado no dia: 12/03/2024</p>
-            <p class="info">Nome: Clara Oliveira da Silva</p>
-            <p class="info">RM: 550726</p>
-            <p class="info">E-mail: clara.oliveira.silva@example.com</p>
-            <div class="line"></div>
-            <p class="p-usuario"> Confirmar nível do usuário</p>
-            <div class="opcao">
-                <select id="options" class="select-input">
-                    <option value="">Selecione uma opção</option>
-                    <option value="funcionario(a)ADM">Funcionário(a) - ADM</option>
-                    <option value="professor(a)">Professor(a)</option>
-                    <option value="aluno(a)">Aluno(a)</option>
-                </select>
-                <button type="submit" class="confirm-button">Confirmar</button>
+        <div class="lineSquare">
+            <div class="input-container">
+                <p class="info">Cadastro realizado no dia: 12/03/2024</p>
+                <p class="info">Nome: Clara Oliveira da Silva</p>
+                <p class="info">RM: 550726</p>
+                <p class="info">E-mail: clara.oliveira.silva@example.com</p>
+                <div class="line"></div>
+                <p class="p-usuario"> Confirmar nível do usuário</p>
+                <div class="opcao">
+                    <select id="options" class="select-input">
+                        <option value="" disabled selected>Selecione uma opção</option>
+                        <option value="funcionario(a)ADM">Funcionário(a) - ADM</option>
+                        <option value="professor(a)">Professor(a)</option>
+                        <option value="aluno(a)">Aluno(a)</option>
+                    </select>
+                    <button type="submit" class="confirm-button">Confirmar</button>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="lineSquare">
-        <div class="input-container">
-            <p>Cadastro realizado no dia: 12/03/2024</p>
-            <p>Nome: Clara Oliveira da Silva</p>
-            <p>RM: 550726</p>
-            <p>E-mail: clara.oliveira.silva@example.com</p>
+        <div class="lineSquare">
+            <div class="input-container">
+                <p class="info">Cadastro realizado no dia: 15/03/2024</p>
+                <p class="info">Nome: Ana Beatriz Silva</p>
+                <p class="info">RM: 782134</p>
+                <p class="info">E-mail: ana.silva@example.com</p>
+                <div class="line"></div>
+                <p class="p-usuario"> Confirmar nível do usuário</p>
+                <div class="opcao">
+                    <select id="options" class="select-input">
+                        <option value="" disabled selected>Selecione uma opção</option>
+                        <option value="funcionario(a)ADM">Funcionário(a) - ADM</option>
+                        <option value="professor(a)">Professor(a)</option>
+                        <option value="aluno(a)">Aluno(a)</option>
+                    </select>
+                    <button type="submit" class="confirm-button">Confirmar</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="lineSquare">
-        <div class="input-container">
-            <p>Cadastro realizado no dia: 12/03/2024</p>
-            <p>Nome: Clara Oliveira da Silva</p>
-            <p>RM: 550726</p>
-            <p>E-mail: clara.oliveira.silva@example.com</p>
+        <div class="lineSquare">
+            <div class="input-container">
+                <p class="info">Cadastro realizado no dia: 18/03/2024</p>
+                <p class="info">Nome: Ana Carolina Silva</p>
+                <p class="info">RM: 483726</p>
+                <p class="info">E-mail: ana.carolina@exemplo.com</p>
+                <div class="line"></div>
+                <p class="p-usuario"> Confirmar nível do usuário</p>
+                <div class="opcao">
+                    <select id="options" class="select-input">
+                        <option value="" disabled selected>Selecione uma opção</option>
+                        <option value="funcionario(a)ADM">Funcionário(a) - ADM</option>
+                        <option value="professor(a)">Professor(a)</option>
+                        <option value="aluno(a)">Aluno(a)</option>
+                    </select>
+                    <button type="submit" class="confirm-button">Confirmar</button>
+                </div>
+            </div>
         </div>
-    </div>
-    <div class="lineSquare">
-        <div class="input-container">
-            <p>Cadastro realizado no dia: 12/03/2024</p>
-            <p>Nome: Clara Oliveira da Silva</p>
-            <p>RM: 550726</p>
-            <p>E-mail: clara.oliveira.silva@example.com</p>
-        </div>
-    </div>
-    <div class="lineSquare">
-        <div class="input-container">
-            <p>Cadastro realizado no dia: 12/03/2024</p>
-            <p>Nome: Clara Oliveira da Silva</p>
-            <p>RM: 550726</p>
-            <p>E-mail: clara.oliveira.silva@example.com</p>
-        </div>
-    </div>
-    <div class="lineSquare">
-        <div class="input-container">
-            <p>Cadastro realizado no dia: 12/03/2024</p>
-            <p>Nome: Clara Oliveira da Silva</p>
-            <p>RM: 550726</p>
-            <p>E-mail: clara.oliveira.silva@example.com</p>
-        </div>
-    </div>
     </div>
 </body>
 </html>
